tests/error/equalsString-wrong-2nd-argument.uplc
(program 0.0.0 [ [ (builtin equalsString) (con string " mundo!") ] (con integer 0) ])